--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "main": "index.js",
     "scripts": {
         "start": "node dist/index",
-        "server": "nodemon dist/index"
+        "server": "nodemon dist/index",
+        "uploads": "copyfiles --up 1 --all src/uploads/imagenes/*.* src/uploads/hospitales/*.* src/uploads/medicos/*.* src/uploads/usuarios/*.*  dist",
+        "build": "npm run uploads && tsc -w"
     },
     "keywords": [],
     "author": "",
@@ -13,13 +15,16 @@
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
+        "copyfiles": "^2.3.0",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "express-fileupload": "^1.1.9",
         "express-validator": "^6.6.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.9.25",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "uuid": "^8.3.0"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.2",
@@ -27,9 +32,11 @@
         "@types/cors": "^2.8.6",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.7",
+        "@types/express-fileupload": "^1.1.3",
         "@types/express-validator": "^3.0.0",
         "@types/jsonwebtoken": "^8.5.0",
         "@types/mongoose": "^5.7.32",
-        "@types/morgan": "^1.9.1"
+        "@types/morgan": "^1.9.1",
+        "@types/uuid": "^8.0.0"
     }
 }
