Seccion 12 Google SignIn

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT=3000
 DB_CNN=mongodb+srv://sham:8u4d48Es0gWB0Iuz@cluster0.esjt8.mongodb.net/hospitaldb
 JWT_SECRET=llksljdsnjkasn889&8kjbsjk5lknlk
+GOOGLE_ID=474211734019-vtt5p59s29qm354s4s4hb953nj5tidu9.apps.googleusercontent.com
+GOOGLE_SECRET=E8oMjTd8GT6ms3luuBb3CG47
